renamed: TFX --> TFXsession, connected.at --> last.used  methods Disconnect, Reconnect, isActive
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/truefx@5 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,5 +1,13 @@
 export(ConnectTrueFX)
+export(Disconnect)
+export(DisconnectTrueFX)
+export(isActive)
 export(ParseTrueFX)
 export(QueryTrueFX)
+export(Reconnect)
+export(ReconnectTrueFX)
 export(TrueFXRef)
 importFrom(XML,readHTMLTable)
+S3method(Disconnect,TFXsession)
+S3method(isActive,TFXsession)
+S3method(Reconnect,TFXsession)
