remove svn:keyword from DESCRIPTION; manually enter the Date instead
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/truefx@11 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,7 +2,7 @@ Package: TrueFX
 Type: Package
 Title: R API to TrueFX
 Version: 0.1.0
-Date: $Date$
+Date: 2012-11-21
 Author: Garrett See
 Maintainer: Garrett See <gsee000@gmail.com>
 Description: Connects R to TrueFX for free streaming real-time and historical
