--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,13 +1,13 @@
-Package: TrueFX
+Package: TFX
 Type: Package
-Title: R API to TrueFX
+Title: R API to TrueFX(tm)
 Version: 0.1.0
-Date: 2012-11-21
+Date: 2012-11-26
 Author: Garrett See
 Maintainer: Garrett See <gsee000@gmail.com>
-Description: Connects R to TrueFX for free streaming real-time and historical
-    tick-by-tick market data for dealable interbank foreign exchange rates with
-    millisecond detail.
+Description: Connects R to TrueFX(tm) for free streaming real-time and
+    historical tick-by-tick market data for dealable interbank foreign exchange
+    rates with millisecond detail.
 License: GPL-3
 URL: http://www.truefx.com
 Depends:
@@ -15,6 +15,6 @@ Depends:
 Imports:
     XML
 Collate:
-    'TrueFX.R'
     'TrueFXRef.R'
-    'TrueFX-package.R'
+    'TFX-package.R'
+    'TFX.R'
